[package]
name = "langmeantree"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust-langmeantree"
license = "MIT OR Apache-2.0"
description = "Tree structures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langmeantree-proc = { path = "../langmeantree-proc", version = "0.1" }
by_address = "1.1.0"
# lazy-regex = "3.0.1"
# maplit = "1.0.2"
# once_cell = "1.18.0"