[package]
name = "smodel"
version = "1.0.1"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust-smodel"
license = "MIT OR Apache-2.0"
description = "Symbol semantic modeling for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smodel-proc = { path = "../smodel-proc", version = "1.0" }
by_address = "1.1.0"
# lazy-regex = "3.0.1"
# maplit = "1.0.2"
# once_cell = "1.18.0"